--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "postinstall": "ng build"
   },
   "private": true,
+  "engines": {
+    "node": "7.2.1",
+    "npm": "3.10.10"
+  },
   "dependencies": {
     "@angular/common": "^2.4.0",
     "@angular/compiler": "^2.4.0",
