--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build -aot -prod"
+    "heroku-prebuild": "npm install -g http-server",
+    "heroku-postbuild": "ng build -prod"
   },
   "private": true,
   "engines": {
@@ -30,6 +31,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
+    "typescript": "~2.0.0",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
@@ -46,7 +48,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.0.0"
+    "tslint": "~4.5.0"
   }
 }
