--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start-dev": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-prebuild": "npm install -g http-server",
-    "heroku-postbuild": "ng build -prod"
+    "heroku-postbuild": "ng build -prod",
+    "start": "http-server dist/"
   },
   "private": true,
   "engines": {
